098_bst_map/grade.txt
Grading at 11/09/2022:01:30:33.551316
For commit ID 8443ea77add991377b6885a5d33aee91f1653bdb
Grading at Tue Nov  8 08:30:28 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = int]’:
bstmap.h:93:16:   required from here
bstmap.h:116:19: error: unused variable ‘value’ [-Werror=unused-variable]
  116 |           const V value = (*current)->value;
      |                   ^~~~~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_74_did_not_match
Line_87_did_not_match
Line_102_did_not_match
Line_115_did_not_match
Line_130_did_not_match
Your file did not match the expected ouput
Testcase failed 
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = Tester]’:
bstmap.h:93:16:   required from here
bstmap.h:115:31: error: no match for ‘operator=’ (operand types are ‘Tester’ and ‘int’)
  115 |           (*toReplace)->value = (*current)->key;
      |           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
89-tester.cpp:6:7: note: candidate: ‘Tester& Tester::operator=(const Tester&)’
    6 | class Tester{
      |       ^~~~~~
89-tester.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘const Tester&’
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:93:16:   required from here
bstmap.h:115:45: error: cannot convert ‘std::__cxx11::basic_string<char>’ to ‘int’ in assignment
  115 |           (*toReplace)->value = (*current)->key;
      |                                 ~~~~~~~~~~~~^~~
      |                                             |
      |                                             std::__cxx11::basic_string<char>
bstmap.h:116:19: error: unused variable ‘value’ [-Werror=unused-variable]
  116 |           const V value = (*current)->value;
      |                   ^~~~~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_98_did_not_match
Line_99_did_not_match
Line_102_did_not_match
Line_103_did_not_match
Line_106_did_not_match
Your file did not match the expected ouput
Testcase failed 
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:93:16:   required from here
bstmap.h:115:31: error: no match for ‘operator=’ (operand types are ‘Tester’ and ‘std::__cxx11::basic_string<char>’)
  115 |           (*toReplace)->value = (*current)->key;
      |           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
89-tester.cpp:6:7: note: candidate: ‘Tester& Tester::operator=(const Tester&)’
    6 | class Tester{
      |       ^~~~~~
89-tester.cpp:6:7: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>’ to ‘const Tester&’
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = int]’:
bstmap.h:93:16:   required from here
bstmap.h:115:45: error: cannot convert ‘Tester’ to ‘int’ in assignment
  115 |           (*toReplace)->value = (*current)->key;
      |                                 ~~~~~~~~~~~~^~~
      |                                             |
      |                                             Tester
bstmap.h:116:19: error: unused variable ‘value’ [-Werror=unused-variable]
  116 |           const V value = (*current)->value;
      |                   ^~~~~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:93:16:   required from here
bstmap.h:115:31: error: no match for ‘operator=’ (operand types are ‘std::__cxx11::basic_string<char>’ and ‘Tester’)
  115 |           (*toReplace)->value = (*current)->key;
      |           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from bstmap.h:4,
                 from 89-tester.cpp:1:
/usr/include/c++/11/bits/basic_string.h:679:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  679 |       operator=(const basic_string& __str)
      |       ^~~~~~~~
/usr/include/c++/11/bits/basic_string.h:679:37: note:   no known conversion for argument 1 from ‘Tester’ to ‘const std::__cxx11::basic_string<char>&’
  679 |       operator=(const basic_string& __str)
      |                 ~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/11/bits/basic_string.h:689:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  689 |       operator=(const _CharT* __s)
      |       ^~~~~~~~
/usr/include/c++/11/bits/basic_string.h:689:31: note:   no known conversion for argument 1 from ‘Tester’ to ‘const char*’
  689 |       operator=(const _CharT* __s)
      |                 ~~~~~~~~~~~~~~^~~
/usr/include/c++/11/bits/basic_string.h:700:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  700 |       operator=(_CharT __c)
      |       ^~~~~~~~
/usr/include/c++/11/bits/basic_string.h:700:24: note:   no known conversion for argument 1 from ‘Tester’ to ‘char’
  700 |       operator=(_CharT __c)
      |                 ~~~~~~~^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_74_did_not_match
Line_87_did_not_match
Line_102_did_not_match
Line_115_did_not_match
Line_130_did_not_match
Your file did not match the expected ouput
Testcase failed 

Overall Grade: F
